syntax = "proto3";

package spot.v1;

option go_package = "spotService/gen/pb/v1;spotv1";

service SpotInstrumentService {
  rpc ViewMarkets(ViewMarketsRequest) returns (ViewMarketsResponse);
}

message ViewMarketsRequest {
  repeated UserRole user_roles = 1;
}

message ViewMarketsResponse {
  repeated Market markets = 1;
}

message Market {
  string id = 1;
  string name = 2;
  string description = 3;
  bool enabled = 4;
}

enum UserRole {
  USER_ROLE_UNSPECIFIED = 0;
  USER_ROLE_COMMON = 1;
  USER_ROLE_VERIFIED = 2;
  USER_ROLE_PREMIUM = 3;
  USER_ROLE_ADMIN = 4;
}

